--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,9 @@
             <input
               type="file"
               id="file-upload"
-              name="file"
+              name="files[]"
               accept=".txt,.pdf"
+              multiple
             />
             <p>
               <svg
