--- a/templates/index.html
+++ b/templates/index.html
@@ -112,6 +112,18 @@
             Exportar Histórico (CSV)
           </a>
         </div>
+        <div
+          class="dashboard-link-wrapper"
+          style="text-align: center; margin-bottom: 1.5rem"
+        >
+          <a
+            href="{{ url_for('dashboard') }}"
+            id="dashboard-link"
+            style="font-weight: 600; color: var(--primary-color)"
+          >
+            Ver Dashboard de Análise &rarr;
+          </a>
+        </div>
 
         <div id="history-list"></div>
       </div>
